basic svg shapes

--- a/style.css
+++ b/style.css
@@ -30,3 +30,25 @@ g {
   stroke: lime;
   stroke-width: 3;
 }
+
+/* CSS ANIMATION */
+.pulse {
+  animation-name: pulse_kf;
+  animation-duration: 1.5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease;
+}
+
+@keyframes pulse_kf {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.08);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
