--- a/cap.css
+++ b/cap.css
@@ -1,3 +1,15 @@
 svg {
   width: 50%;
 }
+
+#Shadow_Image {
+  pointer-events: none;
+}
+
+.g_to_interact_with {
+  fill: transparent;
+}
+
+path {
+  stroke-width: 2;
+}
